--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 
 <div class="site">
   <div class="title">
-    <a href="/">Tim Horton.fm</a>
+    <a href="/">Tim Horton</a>
   </div>
   
   {{ content }}
