--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>{{page.title}}</title>
+   <title>{{ page.title }}</title>
    <meta name="author" content="Tim Horton" />
-   <link rel="stylesheet" href="{{root}}/styles/default.css" type="text/css" media="screen, projection" />
+   <link rel="stylesheet" href="/css/syntax.css" type="text/css" media="screen, projection" />
+   <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
 </head>
 <body>
 
