Added oswald font

--- a/src/_static/styles/main.css
+++ b/src/_static/styles/main.css
@@ -1,7 +1,7 @@
 
 body {
     color: #52585D;
-    font: 1.2em helvetica,arial,freesans,clean,sans-serif;
+    font: 1.2em 'Oswald',helvetica,arial,freesans,clean,sans-serif;
     margin-top: 80px;
 }
 
